# microsuite

./: .env.example  .gitignore  README.md  debug_kafka.py  dev.py  pyproject.toml  run_web.py  test_consumer.py  test_core.py
src/multi_test_tool/: __init__.py  dev_server.py  main.py  web_app.py
src/multi_test_tool/config/: __init__.py  settings.py
src/multi_test_tool/services/: __init__.py  kafka_service.py  message_handler.py
src/multi_test_tool/utils/: __init__.py  helpers.py
src/static/css/: styles.css
src/static/js/: app.js
src/templates/: home.html  index.html
